Fix label alignment for unchecked checkbox render and disabled state

--- a/ui/client-react/src/assets/css/_qbColorVariables.scss
+++ b/ui/client-react/src/assets/css/_qbColorVariables.scss
@@ -239,8 +239,6 @@ $checkbox-background-unchecked-color: $color-black-100;
 $checkbox-border-color: $color-black-500;
 $checkbox-checkmark-editable-color: $color-black-100;
 $checkbox-checkmark-readonly-color: $color-cyan-500;
-$checkbox-size: 16px;
-$checkbox-size-mobile: 24px;
 
 $datepicker-header-bg: $color34;
 $datepicker-header-fg: $color2;
